--- a/mchacks2022/ClientApp/package.json
+++ b/mchacks2022/ClientApp/package.json
@@ -11,6 +11,7 @@
     "@vue/cli": "^4.5.15",
     "autoprefixer": "^9.8.8",
     "core-js": "^3.6.5",
+    "element-plus": "^1.3.0-beta.5",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
