--- a/mchacks2022/ClientApp/package.json
+++ b/mchacks2022/ClientApp/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vue/cli": "^4.5.15",
     "autoprefixer": "^9.8.8",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.3.0-beta.5",
     "postcss": "^7.0.39",
