--- a/mchacks2022/ClientApp/package.json
+++ b/mchacks2022/ClientApp/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@vue/cli": "^4.5.15",
     "autoprefixer": "^9.8.8",
     "axios": "^0.25.0",
